force-app/main/default/objects/MSD_Ticket__c/MSD_Ticket__c.object-meta.xml
<CustomObject>
    <description>NICC-041622</description>
    <label>MSD Ticket</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>MSD Ticket Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSD Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>