force-app/main/default/objects/MSD_Ticket__c/fields/Admin_Comments__c.field-meta.xml
<CustomField>
    <fullName>Admin_Comments__c</fullName>
    <description>Admin Comments</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Admin Comments</inlineHelpText>
    <label>Admin Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>