force-app/main/default/objects/MSD_Ticket__c/fields/Assigned_admin__c.field-meta.xml
<CustomField>
    <fullName>Assigned_admin__c</fullName>
    <description>Assigned Admin</description>
    <inlineHelpText>Assigned Admin</inlineHelpText>
    <label>Assigned Admin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anitha</fullName>
            </value>
            <value>
                <fullName>Laura</fullName>
            </value>
            <value>
                <fullName>Lisa</fullName>
            </value>
            <value>
                <fullName>Manish</fullName>
            </value>
            <value>
                <fullName>Pete</fullName>
            </value>
            <value>
                <fullName>Sean</fullName>
            </value>
            <value>
                <fullName>Srinivasa</fullName>
            </value>
            <value>
                <fullName>Stu</fullName>
            </value>
            <value>
                <fullName>Trevor</fullName>
            </value>
            <value>
                <fullName>Veerandra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>