force-app/main/default/objects/MSD_Ticket__c/fields/Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Date__c</fullName>
    <description>Displays the date the ticket is assigned by an admin</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned Date</label>
    <type>DateTime</type>
</CustomField>