force-app/main/default/objects/MSD_Ticket__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>NICC-041622</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Close Date/Time</inlineHelpText>
    <label>Close Date/Time</label>
    <type>Date</type>
</CustomField>