force-app/main/default/objects/MSD_Ticket__c/fields/Days_on_Hold__c.field-meta.xml
<CustomField>
    <fullName>Days_on_Hold__c</fullName>
    <description>Number of days that the ticket was on hold due to specified On Hold Reason.</description>
    <inlineHelpText>Number of days that the ticket was on hold due to specified On Hold Reason.</inlineHelpText>
    <label>Days on Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>