force-app/main/default/objects/MSD_Ticket__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>NICC-041622</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Group</inlineHelpText>
    <label>Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>