force-app/main/default/objects/MSD_Ticket__c/fields/NI_Change_Control__c.field-meta.xml
<CustomField>
    <fullName>NI_Change_Control__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related NI Change Control record for the solution implementation on this MSD Ticket record.</description>
    <inlineHelpText>Related NI Change Control record for the solution implementation on this MSD Ticket record.</inlineHelpText>
    <label>NI Change Control</label>
    <referenceTo>NI_Change_Control__c</referenceTo>
    <relationshipLabel>MSD Tickets</relationshipLabel>
    <relationshipName>MSD_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>