force-app/main/default/objects/MSD_Ticket__c/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <description>The reason why a ticket is being placed on hold.</description>
    <inlineHelpText>If a ticket is placed On Hold, an On Hold Reason is required.</inlineHelpText>
    <label>On Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Pending Follow UP</fullName>
            </value>
            <value>
                <fullName>Pending Licence Review</fullName>
                <isActive>false</isActive>
                <label>Pending Licence Review</label>
            </value>
            <value>
                <fullName>Pending License Review</fullName>
            </value>
            <value>
                <fullName>Pending NICC</fullName>
            </value>
            <value>
                <fullName>Requestor OOO</fullName>
            </value>
            <value>
                <fullName>User Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>