force-app/main/default/objects/MSD_Ticket__c/fields/On_Hold_Since__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Since__c</fullName>
    <description>This field is populated with Now() as soon as the project status is set to either &quot;Blocked&quot; or &quot;Redirected&quot;. It is then cleared when the project status returns to an active state. The amount of time tracked by this field is cumulatively tracked in the &quot;On Hold Duration (days)&quot; field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>On Hold Since</label>
    <type>DateTime</type>
</CustomField>