force-app/main/default/objects/MSD_Ticket__c/fields/Permissions__c.field-meta.xml
<CustomField>
    <fullName>Permissions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NICC-041622</description>
    <inlineHelpText>Permissions?</inlineHelpText>
    <label>Permissions</label>
    <type>Checkbox</type>
</CustomField>