force-app/main/default/objects/MSD_Ticket__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>NICC-041622</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Priority</inlineHelpText>
    <label>Priority</label>
    <length>10</length>
    <type>Text</type>
</CustomField>