force-app/main/default/objects/MSD_Ticket__c/fields/Requested_Element__c.field-meta.xml
<CustomField>
    <fullName>Requested_Element__c</fullName>
    <description>NICC-041622</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Requested Element</inlineHelpText>
    <label>Requested Element</label>
    <length>255</length>
    <type>Text</type>
</CustomField>