force-app/main/default/objects/MSD_Ticket__c/fields/Room_identification__c.field-meta.xml
<CustomField>
    <fullName>Room_identification__c</fullName>
    <description>NICC-041622</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Room identification</inlineHelpText>
    <label>Room identification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>