force-app/main/default/objects/MSD_Ticket__c/fields/Technician_Priority__c.field-meta.xml
<CustomField>
    <fullName>Technician_Priority__c</fullName>
    <description>NICC-041622</description>
    <inlineHelpText>Technician Priority</inlineHelpText>
    <label>Technician Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>