force-app/main/default/objects/MSD_Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opening_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Affected_user__c</columns>
    <columns>Assigned_admin__c</columns>
    <columns>Last_Contact__c</columns>
    <columns>Summary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>7/31/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>Assigned_admin__c</field>
        <operation>equals</operation>
        <value>Anitha</value>
    </filters>
    <label>All</label>
</ListView>