force-app/main/default/objects/MSD_Ticket__c/listViews/Escalation_Open_Tickets.listView-meta.xml
<ListView>
    <fullName>Escalation_Open_Tickets</fullName>
    <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Affected_user__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Opening_Date__c</columns>
    <columns>Last_Contact__c</columns>
    <columns>Detail__c</columns>
    <columns>Escalation__c</columns>
    <columns>Admin_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Closed,Closed in 1st contact,Completed,Solved,Solved in 1st Contact</value>
    </filters>
    <filters>
        <field>Escalation__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>contains</operation>
        <value>Incident</value>
    </filters>
    <filters>
        <field>Assigned_admin__c</field>
        <operation>notContain</operation>
        <value>Anitha,Laura,Lisa,Pete,Sean,Stu,Trevor,Veerandra</value>
    </filters>
    <label>Escalation - Unassigned</label>
    <sharedTo>
        <group>Business_Systems_Internal</group>
    </sharedTo>
</ListView>