force-app/main/default/objects/MSD_Ticket__c/listViews/Laura_s_Open_Tickets.listView-meta.xml
<ListView>
    <fullName>Laura_s_Open_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Opening_Date__c</columns>
    <columns>Affected_user__c</columns>
    <columns>Status__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Summary__c</columns>
    <columns>NI_Change_Control__c</columns>
    <columns>Last_Contact__c</columns>
    <columns>Assigned_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Closed,Closed in 1st contact,Completed,Solved,Solved in 1st Contact</value>
    </filters>
    <filters>
        <field>Assigned_admin__c</field>
        <operation>equals</operation>
        <value>Laura</value>
    </filters>
    <label>Laura&apos;s Open Tickets</label>
    <sharedTo>
        <group>Business_Systems_Internal</group>
    </sharedTo>
</ListView>