force-app/main/default/objects/MSD_Ticket__c/listViews/MSD_Enhancement_Requests.listView-meta.xml
<ListView>
    <fullName>MSD_Enhancement_Requests</fullName>
    <columns>NAME</columns>
    <columns>Affected_user__c</columns>
    <columns>Detail__c</columns>
    <columns>Assigned_admin__c</columns>
    <columns>Admin_Comments__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Type__c</field>
        <operation>contains</operation>
        <value>Enhancement - Minor,Enhancement - Project,Platform Changes,Process Change Review,Process Error</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Closed,Closed in 1st contact,Completed,Solved,Solved in 1st Contact</value>
    </filters>
    <label>MSD - Enhancement Requests</label>
</ListView>