force-app/main/default/objects/MSD_Ticket__c/listViews/Quick_Wins.listView-meta.xml
<ListView>
    <fullName>Quick_Wins</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4) AND 5</booleanFilter>
    <columns>NAME</columns>
    <columns>Affected_user__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Opening_Date__c</columns>
    <columns>Detail__c</columns>
    <columns>Last_Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Admin_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Closed,Closed in 1st contact,Completed,Solved,Solved in 1st Contact</value>
    </filters>
    <filters>
        <field>Assigned_admin__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>Approval Process,Community Issue/Request,Dataload,Email Notification,Exchange Rates,&quot;Field (New field, field visibility)&quot;,General User Update,Grant Login Access,Lightning for Outlook,Locked Account,Manager update</value>
    </filters>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>Page Layout Change,Partner Community Access,Password Reset,Permission Update,Picklist Value Addition/Update,Queue/Public Group,Quip,Remove User,Role/Profile Change,Sandbox Access,Sandbox Refresh,Vas024/Surveys,Webform</value>
    </filters>
    <filters>
        <field>Affected_user__c</field>
        <operation>notContain</operation>
        <value>Hammond</value>
    </filters>
    <label>Quick Wins</label>
    <sharedTo>
        <group>Business_Systems_Internal</group>
    </sharedTo>
</ListView>