force-app/main/default/objects/MSD_Ticket__c/listViews/Srinivasa_s_Open_Tickets.listView-meta.xml
<ListView>
    <fullName>Srinivasa_s_Open_Tickets</fullName>
    <columns>NAME</columns>
    <columns>NI_Change_Control__c</columns>
    <columns>Affected_user__c</columns>
    <columns>Opening_Date__c</columns>
    <columns>Last_Contact__c</columns>
    <columns>Detail__c</columns>
    <columns>Admin_Comments__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Complete_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Closed,Closed in 1st contact,Completed,Solved,Solved in 1st Contact</value>
    </filters>
    <filters>
        <field>Assigned_admin__c</field>
        <operation>equals</operation>
        <value>Srinivasa</value>
    </filters>
    <label>Srinivasa&apos;s Open Tickets</label>
</ListView>