force-app/main/default/objects/MSD_Ticket__c/listViews/Support_Tickets.listView-meta.xml
<ListView>
    <fullName>Support_Tickets</fullName>
    <columns>NAME</columns>
    <columns>Affected_user__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Detail__c</columns>
    <columns>Last_Contact__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Assigned_admin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Affected_user__c</field>
        <operation>contains</operation>
        <value>Jackson,Burnham,Cilley</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Closed,Closed in 1st contact,Completed,Solved,Solved in 1st Contact</value>
    </filters>
    <label>Support Tickets</label>
</ListView>